# naturalDeduction

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  template.env
.github/workflows/: publish.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: docs.rs  error.rs  logging.rs  main.rs  utils.rs
backend/src/api/: exercise_models.rs  formula_models.rs  mod.rs  models.rs  normalize.rs  routes.rs  rule_models.rs  utils.rs
backend/src/db/: exercise.rs  mod.rs  node.rs  prelude.rs  sea_orm_active_enums.rs  statement.rs
backend/src/lib/: derivation.rs  derivation_old.rs  grammar.pest  latex.rs  mod.rs  normalize.rs  parsing.rs  sat.rs
backend/src/lib/db/: mod.rs  utils.rs
backend/src/lib/derivation/: formula.rs  mod.rs  sat.rs  statement.rs  tree.rs
backend/src/lib/parser/: mod.rs
backend/src/lib/rule/: apply.rs  mod.rs  rule_definition.rs
db/: schema.prisma
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  orval.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/api/: index.ts
frontend/src/lib/components/: createExercise.tsx  difficulty.tsx  exerciseListElement.tsx  exerciseOverview.tsx  feedback.tsx  footer.tsx  grammarTooltip.tsx  header.tsx  info.tsx  semesterProgress.tsx  sideCondition.tsx  statement.tsx
frontend/src/lib/hook/: DragContext.tsx  FormulaContext.tsx
frontend/src/lib/redux/: StoreProvider.tsx  reducers.tsx  store.tsx
frontend/src/lib/utils/: color.ts  export.ts  finished.ts  formula.ts  formula.tsx  localStorage.ts  notifications.ts  rule.ts
(+23 files in other folders)
