[package]
name = "naturalDeduction"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
z3 = "0.12.1"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
tower-http = { version = "0.5.0", features = ["cors"] }
sea-orm = { version = "0.12.4", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-uuid",
] }
uuid = { version = "1.4.1", features = ["v4"] }
utoipauto = "=0.3.0-alpha.1"
